# ppx_embed_file

./: README.md  README.mdx  dune  main.ml  main.mli  ppx_embed_file.opam
test/: dune  ppx_embed_test.ml  simple.ml  simple.mli
