opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/ppx_embed_file"
bug-reports: "https://github.com/janestreet/ppx_embed_file/issues"
dev-repo: "git+https://github.com/janestreet/ppx_embed_file.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/ppx_embed_file/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "ppx_jane"
  "dune"     {>= "3.17.0"}
  "ppxlib"   {= "0.33.0+ox"}
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "A PPX that allows embedding files directly into executables/libraries as strings or bytes"
description: "
Part of the Jane Street's PPX rewriters collection.
"
